--- a/flashback.html
+++ b/flashback.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashback</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='logo' viewBox='0 0 24 48'%3E%3Cpath d='M14 0L7 24h5l-2 24L22 20h-7l5-20z' fill='rgb(37, 99, 235)' stroke='none'/%3E%3C/svg%3E">
     <style>
         body {
             margin: 0;
@@ -111,7 +112,7 @@
         <div class="header">
             <div class="logo-container">
                 <svg class="logo" viewBox="0 0 24 48">
-                    <path d="M14 0L7 24h5l-2 24L22 20h-7l5-20z" fill="currentColor" stroke="none"/>
+                    <path d="M14 0L7 24h5l-2 24L22 20h-7l5-20z" fill="rgb(37, 99, 235)" stroke="none"/>
                 </svg>
                 <span class="brand">Flashback</span>
             </div>
